JIRA-337: Bug fix for drop down letters being cut off

--- a/app/styles/_header.scss
+++ b/app/styles/_header.scss
@@ -173,6 +173,7 @@
         > .react-select-box-label {
             font-size: inherit;
             font-weight: 400;
+            line-height: 19px;
             color: $gray-dark;
 
             & .react-select-box-empty {
@@ -239,7 +240,7 @@
     }
 }
 
-.react-select-box-container.SelectBox__Types.react-select-box-multi.react-select-box-empty.open, 
+.react-select-box-container.SelectBox__Types.react-select-box-multi.react-select-box-empty.open,
 .react-select-box-container.SelectBox__Organizations.react-select-box-multi.react-select-box-empty.open {
     > .react-select-box {
       background: $gray-lightest;
@@ -274,15 +275,15 @@
     }
 }
 
-.tt-menu { 
+.tt-menu {
   padding: 15px 0px !important;
 }
- 
+
 .tt-suggestion {
   border-left: 4px solid transparent;
   padding: 5px 65px;
 }
- 
+
 .tt-suggestion:hover {
     color:#087399;
     border-left: 4px solid #009DD3;
